# deep-acu

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.acp/: README.md
.acp/templates/: completion-report.md  context-bundle.md  status-update.md  task-request.md
.github/: copilot-instructions.md
.github/prompts/: consume-deepagent-artifact.prompt.md  delegate-to-deepagent.prompt.md  request-deepagent-context.prompt.md
deepagent_acp/: __init__.py  acp_runner.py  model_loader.py  observability.py  server.py  smoke_test.py  watcher.py
docs/: chub-and-source-notes.md  empirical-validation.md
scripts/: acp_smoke_test.py  run_deepagent_acp.py
skills/: mailbox_interop.md
src/acp_mailbox/: acp_runner.py  langchain_observer.py  model_loader.py  observability.py  watcher.py
